<resources>
    <string name="app_name">MOVEMEƎT</string>
    <string name="subtitle">Sport together</string>
    <!-- share run man/woman -->
    <string name="run_man">run man</string>
    <string name="run_woman">run woman</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_chat">Chat</string>
    <string name="map_key" translatable="false">AIzaSyB_qsP8AOP_P0MdlPz-48TDaJYjTP3vbjo</string>
    <string name="toast">Logged in successfully.</string>
    <string name="navigation_drawer_close">true</string>
    <string name="navigation_drawer_open">true</string>

    <!-- home screen -->
    <string name="home_record_run">Record Run</string>
    <string name="homeScreenImageDescription">People Running</string>
    <string name="signInButton">Sign In</string>
    <string name="noAccount"><u>Continue without account</u></string>

    <!-- Drawer/Menu -->
    <string name="drawer_activities_group">Activities</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_add_activity">Add Activity</string>
    <string name="drawer_start_activity">Start Activity</string>
    <string name="drawer_list_activities">List of my activities</string>
    <string name="drawer_chat_group">Chat</string>
    <string name="drawer_chat">General Chat</string>
    <string name="drawer_settings_group">Settings</string>
    <string name="drawer_edit_profile">Profile</string>
    <string name="drawer_logout_group">Logout</string>
    <string name="drawer_logout">Logout</string>
    <string name="drawer_home_group">Home</string>

    <!-- message_out -->
    <string name="message_out_username">username</string>
    <string name="message_out_messageImageView">messageImageView</string>
    <string name="message_out_message_time">01–01–2000(00:00am)</string>
    <string name="message_out_imageProfile">imageProfile</string>

    <!-- message -->
    <string name="message_username">username</string>
    <string name="message_messageImageView">messageImageView</string>
    <string name="message_message_time">01–01–2000(00:00am)</string>
    <string name="message_imageProfile">imageProfile</string>

    <!-- header -->
    <string name="header_imageViewProfile">imageViewProfile</string>
    <string name="header_name">Name</string>
    <string name="header_phone">Phone</string>
    <string name="header_email">Email</string>

    <!-- activity upload -->
    <string name="activity_upload_upload_activity_title">New Activity</string>
    <string name="activity_upload_edit_text_title_hint">Title</string>
    <string name="activity_upload_edit_text_nparticipants_hint">No. of participants</string>
    <string name="activity_upload_button_confirm_upload">Create</string>
    <string name="activity_upload_edit_text_location_hint">Location</string>
    <string name="activity_upload_edit_text_description_hint">A short description…</string>
    <string name="activity_upload_edit_text_date_hint">Date</string>
    <string name="activity_upload_edit_text_start_time_hint">Time</string>
    <string name="activity_upload_edit_text_time_hint">Duration</string>

    <!-- activity register -->
    <string name="register_create_account">Create new account</string>
    <string name="register_full_name">Full Name</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_phone_hint">Phone</string>
    <string name="register_register_button">Register</string>
    <string name="register_loggin_button">Already Registered? Login Here!</string>
    <!-- activity register - warning messages -->
    <string name="register_email_required_message">Email is required.</string>
    <string name="register_password_required_message">Password is required.</string>
    <string name="register_short_password_message">Password must be >= 6 characters.</string>
    <string name="register_toast_account_already_exists">This email address is already being used!</string>

    <!-- activity profile -->
    <string name="activity_profile_textViewUserProfile">User Profile</string>
    <string name="activity_profile_image_view_profile_image">profile_image</string>
    <string name="activity_profile_icon_full_name">Icon Full Name</string>
    <string name ="activity_profile_full_name">Full Name</string>
    <string name ="activity_profile_full_name_hint">Your Name</string>
    <string name="activity_profile_icon_email">Icon Email</string>
    <string name ="activity_profile_email">Email</string>
    <string name ="activity_profile_email_hint">Your Email Address</string>
    <string name="activity_profile_icon_phone">Icon Phone</string>
    <string name ="activity_profile_phone">Phone</string>
    <string name ="activity_profile_phone_hint">Your Phone</string>
    <string name="activity_profile_icon_description">Icon Phone</string>
    <string name ="activity_profile_description">Description</string>
    <string name ="activity_profile_description_hint">Your Description</string>
    <string name ="activity_profile_icon_change_profile">Icon Change Profile</string>
    <string name ="activity_profile_icon_delete_account">Delete account</string>
    <string name ="activity_profile_icon_modify_account">Modify account</string>

    <!-- activity maps -->

    <!-- activity main unregister -->

    <!-- activity main -->

    <!-- activity login -->
    <string name ="activity_login_title">Login to your account</string>
    <string name ="activity_login_email_hint">Email</string>
    <string name ="activity_login_password_hint">Password</string>
    <string name="activity_login_login_button">Login</string>
    <string name="activity_login_create_account_button">New Here? Create Account</string>

    <!-- activity list -->
    <string name="activity_list_title">Activities</string>

    <!-- GPS recording -->
    <string name="gps_recording_start">Start</string>

    <!-- activity edit profile -->
    <string name="edit_profile_title">User Settings</string>
    <string name="edit_profile_picture">Profile Picture</string>
    <string name="edit_profile_full_name">Your Name</string>
    <string name="edit_profile_email">Your Email Address</string>
    <string name="edit_profile_phone">Your Phone</string>
    <string name="edit_profile_description">Description</string>
    <string name="edit_profile_save_profile_data">Save profile</string>

    <!-- activity description -->
    <string name="activity_description_title">Title</string>
    <string name="activity_description_by">By &#160;</string>
    <string name="activity_description_with">&#160;with&#160;</string>
    <string name="activity_description_during">&#160;during&#160;</string>
    <string name="activity_description_hours">&#160;hours</string>
    <string name="activity_description_organizer">Organizer</string>
    <string name="activity_description_what">What ?</string>
    <string name="activity_description_when">When ?</string>
    <string name="activity_description_where">Where ?</string>
    <string name="activity_description_sport">Sport</string>
    <string name="activity_description_number_participant">Number participant</string>
    <string name="activity_description_participants"> &#160;participants</string>
    <string name="activity_description_date">date</string>
    <string name="activity_description_duration">Duration</string>
    <string name="activity_description_address">Address</string>
    <string name="activity_description_description">Description</string>
    <string name="activity_description_register_button">Register</string>
    <string name="activity_description_GPS_recording_button">Record</string>
    <string name="activity_description_unregister_button">Unregister</string>
    <string name="activity_description_chat_button">Chat</string>
    <string name="activity_description_sign_in">Log in to register</string>

    <string name="activity_description_stats">Stats</string>
    <string name="activity_description_dist">Distance: </string>
    <string name="activity_description_time">Time: </string>
    <string name="activity_description_avgSpeed">Average Speed: </string>

    <!-- chat -->
    <string name="activity_chat_addMessageImageView">addMessageImageView</string>
    <string name="activity_chat_type_post">Type your post</string>
    <string name="activity_chat_initial_message">Initial chat welcome message</string>
    <string name="activity_send_image_button">Send Image</string>
    <string name="title_activity_workout">WorkoutActivity</string>
    <string name="tab_text_1">Text Workouts</string>
    <string name="tab_text_2">Image Workouts</string>
    <string name="tab_text_3">PDF Workouts</string>


</resources>